fixed cursor on smaller screens/phones

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 body {
-  cursor: none;
   margin: 0;
   background-color: #171717;
   -webkit-font-smoothing: antialiased;
